# tmxparser

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: fire_animation.tsx  test.tmx  test_animation.tmx  test_b64.tmx  test_b64_gzip.tmx  test_b64_zlib.tmx  test_b64_zstd.tmx  test_tileset.png.txt
assets/animation/: test_animation.tmx
cmake/: CheckModules.cmake  tmxparserConfig.cmake.in
cmake/Modules/: FindBase64.cmake  FindPugixml.cmake  FindSDL3.cmake  FindSTB.cmake  FindZLIB.cmake  Findlibzstd.cmake
examples/: CMakeLists.txt
examples/SDL3/: CMakeLists.txt  README.md  main.cpp
examples/SDL3/animated/: CMakeLists.txt  README.md  main.cpp
examples/SDL3/basic/: CMakeLists.txt  main.cpp
examples/SDL3/common/: CMakeLists.txt  sdl3_utils.cpp  sdl3_utils.hpp
examples/SDL3/infinite/: CMakeLists.txt  README.md  main.cpp
examples/SDL3/object/: CMakeLists.txt  README.md  main.cpp
examples/basic/: CMakeLists.txt  main.cpp
include/tmx/: Map.hpp  Parser.hpp  Render.hpp  RenderData.hpp  tmx.hpp
include/tmx/Core/: Core.hpp
include/tmx/Parser/: Parser.hpp
include/tmx/Render/: Render.hpp
src/: CMakeLists.txt  Map.cpp  Parser.cpp  Render.cpp  RenderData.cpp
src/Parser/: Parser.cpp
src/Render/: Render.cpp
tests/: CMakeLists.txt  test_infinite.cpp  test_parser.cpp
